# ferrite

./: Cargo.toml  LICENSE  Makefile  README.md  systemd-tmpfiles.conf
src/: app.rs  auth.rs  event.rs  main.rs  power.rs  state.rs  ui.rs  util.rs
src/widgets/: mod.rs  select.rs  text.rs  widget.rs
