[package]
name = "ferrite"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
color-eyre = "0.6.5"
crossterm = "0.29.0"
greetd_ipc = {version = "0.10.3", features = ["sync-codec"] }
hostname = "0.4.2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tui-input = "0.14.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
